feat: setup attachment forward
