# src/network/apis/BaseAPI.ts
@@ -9,6 +9,7 @@ import { includes } from 'lodash';
 
 import useStore from '../../store/Store';
 import IBaseAPI, { RequestType } from '../../types/network/apis/IBaseAPI';
+import { AdditionalHeaders } from '../../types/network/models/attachmentTypes';
 
 export default abstract class BaseAPI implements IBaseAPI {
 	private readonly url: string = '/services/chats/';
@@ -50,7 +51,7 @@ export default abstract class BaseAPI implements IBaseAPI {
 		endpoint: string,
 		requestType: RequestType,
 		file: File,
-		description?: string
+		optionalFields?: AdditionalHeaders
 	): Promise<any> {
 		return new Promise<any>((resolve, reject) => {
 			const reader = new FileReader();
@@ -58,7 +59,12 @@ export default abstract class BaseAPI implements IBaseAPI {
 				const headers = new Headers();
 				headers.append('fileName', btoa(encodeURIComponent(file.name)));
 				headers.append('mimeType', file.type);
-				description && headers.append('description', description);
+				if (optionalFields) {
+					optionalFields.description && headers.append('description', optionalFields.description);
+					optionalFields.messageId && headers.append('description', optionalFields.messageId);
+					optionalFields.replyId && headers.append('description', optionalFields.replyId);
+				}
+
 				// Add sessionId to headers only if it is already defined
 				const sessionId = useStore.getState().session.sessionId;
 				if (sessionId) {
