# src/types/network/xmpp/IXMPPClient.ts
@@ -4,8 +4,6 @@
  * SPDX-License-Identifier: AGPL-3.0-only
  */
 
-import { TextMessage } from '../../store/MessageTypes';
-
 interface IXMMPClient {
 	connect(token: string): void;
 	// Presence
@@ -26,7 +24,6 @@ interface IXMMPClient {
 	): void;
 	sendChatMessageDeletion(roomId: string, messageId: string): void;
 	sendChatMessageCorrection(roomId: string, message: string, messageId: string): void;
-	forwardMessage(message: TextMessage, roomIds: string[]): void;
 	requestHistory(roomId: string, endHistory: number, quantity?: number): void;
 	requestHistoryBetweenTwoMessage(
 		roomId: string,
